Updated game to better fit screen sizes

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <!-- Custom PreHead code is injected here -->
+
 
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,6 +13,7 @@
 
     <!-- Builtin injector for disabling cache -->
     <meta http-equiv="pragma" content="no-cache" />
+
     <!-- Set the background colour of the document -->
     <style>
         body {
@@ -76,12 +79,13 @@
 <body>
     <div class="gm4html5_div_class" id="gm4html5_div_id">
         <!-- Create the canvas element the game draws to -->
-        <canvas id="canvas" width="500" height="500">
+        <canvas id="canvas" width="650" height="650"
+            style="position: absolute; top: 50%; left: 50%; bottom: -50%; right: -50%; transform: translate(-50%, -50%);">
             <p>Your browser doesn't support HTML5 canvas.</p>
         </canvas>
     </div>
     <!-- Run the game code -->
-    <script type="text/javascript" src="html5game/Fruity Shooty.js?cachebust=1731449611"></script>
+    <script type="text/javascript" src="html5game/Fruity Shooty.js?cachebust=1951447579"></script>
     <script>window.onload = GameMaker_Init;</script>
 </body>
 
